--- a/pkg/services/provisioning/orgs/testdata/two-orgs/two-orgs.yaml
+++ b/pkg/services/provisioning/orgs/testdata/two-orgs/two-orgs.yaml
@@ -3,3 +3,7 @@ orgs:
     name: First Org
   - id: 2
     name: Second Org
+    preferences:
+      homeDashboardId: 0
+      timezone: browser
+      theme: dark
