--- a/conf/provisioning/orgs/sample.yaml
+++ b/conf/provisioning/orgs/sample.yaml
@@ -12,3 +12,8 @@ apiVersion: 1
 #  name: First Org.
 #- id: 2
 #  name: Second Org.
+#  preferences:
+#    # Needs to be known up front
+#    homeDashboardId: 1
+#    timezone: browser
+#    theme: light
