--- a/package.json
+++ b/package.json
@@ -158,7 +158,7 @@
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.2",
     "babel-plugin-angularjs-annotate": "0.10.0",
-    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-macros": "3.1.0",
     "copy-webpack-plugin": "9.0.1",
     "css-loader": "6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.3",
@@ -225,8 +225,7 @@
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "4.4.0",
-    "webpack-merge": "5.8.0",
-    "yarn": "^1.22.17"
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
     "@emotion/css": "11.1.3",
