--- a/.github/workflows/detect-breaking-changes.yml
+++ b/.github/workflows/detect-breaking-changes.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: c-hive/gha-yarn-cache@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
 
     - name: Yarn install
       run: yarn install --immutable
