--- a/.github/workflows/detect-breaking-changes.yml
+++ b/.github/workflows/detect-breaking-changes.yml
@@ -10,11 +10,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: actions/setup-node@v2
+    - name: Install Node.js
+      uses: actions/setup-node@v2
       with:
         node-version: '16'
 
-    - name: Yarn install
+    - name: Install Yarn
+      run: npm install --global yarn
+
+    - name: Install dependencies
       run: yarn install --immutable
 
     - name: Build packages
