defaults.ini - added line breaks in comments
After grafana updates, I'm checking the config every time.
Long lines with comments are not very convenient to read in terminal and editor.
I added line breaks to comments and tried to keep the comments readable and meaningful by transferring meaningful sentences.
I didn't change the text in the comments.
I hope it will be useful to others, thanks.
Same as #43006

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -129,7 +129,8 @@ type = database
 
 # cache connectionstring options
 # database: will use Grafana primary database.
-# redis: config like redis server e.g. `addr=127.0.0.1:6379,pool_size=100,db=0,ssl=false`. Only addr is required. ssl may be 'true', 'false', or 'insecure'.
+# redis: config like redis server e.g. `addr=127.0.0.1:6379,pool_size=100,db=0,ssl=false`. 
+# Only addr is required. ssl may be 'true', 'false', or 'insecure'.
 # memcache: 127.0.0.1:11211
 connstr =
 
@@ -310,7 +311,8 @@ snapshot_remove_expired = true
 # Number dashboard versions to keep (per dashboard). Default: 20, Minimum: 1
 versions_to_keep = 20
 
-# Minimum dashboard refresh interval. When set, this will restrict users to set the refresh interval of a dashboard lower than given interval. Per default this is 5 seconds.
+# Minimum dashboard refresh interval. When set, this will restrict users to set the refresh interval of a dashboard lower than given interval.
+# Per default this is 5 seconds.
 # The interval string is a possibly signed sequence of decimal numbers, followed by a unit suffix (ms, s, m, h, d), e.g. 30s or 1m.
 min_refresh_interval = 5s
 
@@ -319,7 +321,8 @@ default_home_dashboard_path =
 
 ################################### Data sources #########################
 [datasources]
-# Upper limit of data sources that Grafana will return. This limit is a temporary configuration and it will be deprecated when pagination will be introduced on the list data sources API.
+# Upper limit of data sources that Grafana will return. 
+# This limit is a temporary configuration and it will be deprecated when pagination will be introduced on the list data sources API.
 datasource_limit = 5000
 
 #################################### Users ###############################
@@ -349,7 +352,8 @@ password_hint = password
 # Default UI theme ("dark" or "light")
 default_theme = dark
 
-# Path to a custom home page. Users are only redirected to this if the default home dashboard is used. It should match a frontend route and contain a leading slash.
+# Path to a custom home page. Users are only redirected to this if the default home dashboard is used. 
+# It should match a frontend route and contain a leading slash.
 home_page =
 
 # External user management
@@ -363,7 +367,8 @@ viewers_can_edit = false
 # Editors can administrate dashboard, folders and teams they create
 editors_can_admin = false
 
-# The duration in time a user invitation remains valid before expiring. This setting should be expressed as a duration. Examples: 6h (hours), 2d (days), 1w (week). Default is 24h (24 hours). The minimum supported duration is 15m (15 minutes).
+# The duration in time a user invitation remains valid before expiring. This setting should be expressed as a duration.
+# Examples: 6h (hours), 2d (days), 1w (week). Default is 24h (24 hours). The minimum supported duration is 15m (15 minutes).
 user_invite_max_lifetime_duration = 24h
 
 # Enter a comma-separated list of usernames to hide them in the Grafana UI. These users are shown to Grafana admins and to themselves.
@@ -373,10 +378,15 @@ hidden_users =
 # Login cookie name
 login_cookie_name = grafana_session
 
-# The maximum lifetime (duration) an authenticated user can be inactive before being required to login at next visit. Default is 7 days (7d). This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month). The lifetime resets at each successful token rotation (token_rotation_interval_minutes).
+# The maximum lifetime (duration) an authenticated user can be inactive before being required to login at next visit.
+# Default is 7 days (7d). 
+# This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month).
+# The lifetime resets at each successful token rotation (token_rotation_interval_minutes).
 login_maximum_inactive_lifetime_duration =
 
-# The maximum lifetime (duration) an authenticated user can be logged in since login time before being required to login. Default is 30 days (30d). This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month).
+# The maximum lifetime (duration) an authenticated user can be logged in since login time before being required to login.
+# Default is 30 days (30d). 
+# This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month).
 login_maximum_lifetime_duration =
 
 # How often should auth tokens be rotated for authenticated users when being active. The default is each 10 minutes.
@@ -744,7 +754,10 @@ global_alert_rule = -1
 
 #################################### Unified Alerting ####################
 [unified_alerting]
-# Enable the Unified Alerting sub-system and interface. When enabled we'll migrate all of your alert rules and notification channels to the new system. New alert rules will be created and your notification channels will be converted into an Alertmanager configuration. Previous data is preserved to enable backwards compatibility but new data is removed when switching. When this configuration section and flag are not defined, the state is defined at runtime. See the documentation for more details.
+# Enable the Unified Alerting sub-system and interface. When enabled we'll migrate all of your alert rules and notification channels to the new system.
+# New alert rules will be created and your notification channels will be converted into an Alertmanager configuration.
+# Previous data is preserved to enable backwards compatibility but new data is removed when switching. 
+# When this configuration section and flag are not defined, the state is defined at runtime. See the documentation for more details.
 enabled =
 
 # Comma-separated list of organization IDs for which to disable unified alerting. Only supported if unified alerting is enabled.
@@ -758,13 +771,15 @@ admin_config_poll_interval = 60s
 # The interval string is a possibly signed sequence of decimal numbers, followed by a unit suffix (ms, s, m, h, d), e.g. 30s or 1m.
 alertmanager_config_poll_interval = 60s
 
-# Listen address/hostname and port to receive unified alerting messages for other Grafana instances. The port is used for both TCP and UDP. It is assumed other Grafana instances are also running on the same port.
+# Listen address/hostname and port to receive unified alerting messages for other Grafana instances. 
+# The port is used for both TCP and UDP. It is assumed other Grafana instances are also running on the same port.
 ha_listen_address = "0.0.0.0:9094"
 
 # Explicit address/hostname and port to advertise other Grafana instances. The port is used for both TCP and UDP.
 ha_advertise_address = ""
 
-# Comma-separated list of initial instances (in a format of host:port) that will form the HA cluster. Configuring this setting will enable High Availability mode for alerting.
+# Comma-separated list of initial instances (in a format of host:port) that will form the HA cluster.
+# Configuring this setting will enable High Availability mode for alerting.
 ha_peers = ""
 
 # Time to wait for an instance to send a notification via the Alertmanager. In HA, each Grafana instance will
@@ -790,7 +805,8 @@ execute_alerts = true
 # The timeout string is a possibly signed sequence of decimal numbers, followed by a unit suffix (ms, s, m, h, d), e.g. 30s or 1m.
 evaluation_timeout = 30s
 
-# Number of times we'll attempt to evaluate an alert rule before giving up on that evaluation. This option has a legacy version in the `[alerting]` section that takes precedence.
+# Number of times we'll attempt to evaluate an alert rule before giving up on that evaluation.
+# This option has a legacy version in the `[alerting]` section that takes precedence.
 max_attempts = 3
 
 # Minimum interval to enforce between rule evaluations. Rules will be adjusted if they are less than this value or if they are not multiple of the scheduler interval (10s). Higher values can help with resource management as we'll schedule fewer evaluations over time. This option has a legacy version in the `[alerting]` section that takes precedence.
@@ -799,7 +815,9 @@ min_interval = 10s
 
 #################################### Alerting ############################
 [alerting]
-# Enable the legacy alerting sub-system and interface. If Unified Alerting is already enabled and you try to go back to legacy alerting, all data that is part of Unified Alerting will be deleted. When this configuration section and flag are not defined, the state is defined at runtime. See the documentation for more details.
+# Enable the legacy alerting sub-system and interface. 
+# If Unified Alerting is already enabled and you try to go back to legacy alerting, all data that is part of Unified Alerting will be deleted. 
+# When this configuration section and flag are not defined, the state is defined at runtime. See the documentation for more details.
 enabled =
 
 # Makes it possible to turn off alert execution but alerting UI is visible
@@ -963,12 +981,14 @@ container_name =
 
 [rendering]
 # Options to configure a remote HTTP image rendering service, e.g. using https://github.com/grafana/grafana-image-renderer.
-# URL to a remote HTTP image renderer service, e.g. http://localhost:8081/render, will enable Grafana to render panels and dashboards to PNG-images using HTTP requests to an external service.
+# URL to a remote HTTP image renderer service, e.g. http://localhost:8081/render, will enable Grafana to render panels and 
+# dashboards to PNG-images using HTTP requests to an external service.
 server_url =
-# If the remote HTTP image renderer service runs on a different server than the Grafana server you may have to configure this to a URL where Grafana is reachable, e.g. http://grafana.domain/.
+# If the remote HTTP image renderer service runs on a different server than the Grafana server you may have to configure 
+# this to a URL where Grafana is reachable, e.g. http://grafana.domain/.
 callback_url =
-# Concurrent render request limit affects when the /render HTTP endpoint is used. Rendering many images at the same time can overload the server,
-# which this setting can help protect against by only allowing a certain amount of concurrent requests.
+# Concurrent render request limit affects when the /render HTTP endpoint is used. Rendering many images at the same time can
+# overload the server, which this setting can help protect against by only allowing a certain amount of concurrent requests.
 concurrent_render_request_limit = 30
 
 [panels]
@@ -979,7 +999,8 @@ disable_sanitize_html = false
 [plugins]
 enable_alpha = false
 app_tls_skip_verify_insecure = false
-# Enter a comma-separated list of plugin identifiers to identify plugins to load even if they are unsigned. Plugins with modified signatures are never loaded.
+# Enter a comma-separated list of plugin identifiers to identify plugins to load even if they are unsigned. 
+# Plugins with modified signatures are never loaded.
 allow_loading_unsigned_plugins =
 # Enable or disable installing / uninstalling / updating plugins directly from within Grafana.
 plugin_admin_enabled = true
@@ -1096,7 +1117,8 @@ interval_year = YYYY
 # Experimental feature
 use_browser_locale = false
 
-# Default timezone for user preferences. Options are 'browser' for the browser local timezone or a timezone name from IANA Time Zone database, e.g. 'UTC' or 'Europe/Amsterdam' etc.
+# Default timezone for user preferences. 
+# Options are 'browser' for the browser local timezone or a timezone name from IANA Time Zone database, e.g. 'UTC' or 'Europe/Amsterdam' etc.
 default_timezone = browser
 
 [expressions]
