--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "@grafana/eslint-config": "2.5.1",
     "@grafana/toolkit": "workspace:*",
     "@grafana/tsconfig": "^1.0.0-rc1",
-    "@lingui/cli": "^3.12.1",
-    "@lingui/macro": "^3.12.1",
+    "@lingui/cli": "3.12.1",
+    "@lingui/macro": "3.12.1",
     "@microsoft/api-extractor": "7.18.16",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@react-types/button": "3.4.1",
@@ -240,8 +240,8 @@
     "@grafana/ui": "workspace:*",
     "@jaegertracing/jaeger-ui-components": "workspace:*",
     "@kusto/monaco-kusto": "4.1.2",
-    "@lingui/core": "^3.12.1",
-    "@lingui/react": "^3.12.1",
+    "@lingui/core": "3.12.1",
+    "@lingui/react": "3.12.1",
     "@opentelemetry/api": "1.0.2",
     "@opentelemetry/exporter-collector": "0.25.0",
     "@opentelemetry/semantic-conventions": "1.0.0",
