chore: run the detect-breaking-changes flow on opening a PR

--- a/.github/workflows/detect-breaking-changes.yml
+++ b/.github/workflows/detect-breaking-changes.yml
@@ -2,7 +2,7 @@ name: Levitate
 
 on:
   pull_request:
-    types: [synchronize, reopened]
+    types: [synchronize, opened, reopened]
 
 jobs:
   build:
