--- a/.drone.yml
+++ b/.drone.yml
@@ -784,6 +784,20 @@ steps:
   image: grafana/grafana-ci-deploy:1.3.1
   name: upload-packages
 - commands:
+  - printenv GCP_KEY | base64 -d > /tmp/gcpkey_upload_artifacts.json
+  - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
+  - gsutil -m rsync -d -r ./e2e/videos gs://$${UPLOAD_E2E_TEST_ARTIFACTS_BUCKET}/artifacts/${DRONE_BUILD_NUMBER}
+  depends_on:
+  - end-to-end-tests-dashboards-suite
+  - end-to-end-tests-panels-suite
+  - end-to-end-tests-smoke-tests-suite
+  - end-to-end-tests-various-suite
+  name: upload-e2e-test-artifacts
+  environment:
+    GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY:
+      from_secret: gcp_upload_artifacts_key
+    UPLOAD_E2E_TEST_ARTIFACTS_BUCKET: deployment-pipeline-artifacts-dev
+- commands:
   - ./bin/grabpl upload-cdn --edition oss --bucket "grafana-static-assets"
   depends_on:
   - end-to-end-tests-server
@@ -4107,6 +4121,12 @@ get:
   path: infra/data/ci/grafana/prerelease
 kind: secret
 name: prerelease_bucket
+---
+get:
+  name: not-sure-yet-what-to-put-here
+  path: secret/data/hosted-grafana/ops-us-east-0/deployment-artifacts-uploader-account
+kind: secret
+name: gcp_upload_artifacts_key
 ---
 kind: signature
 hmac: d408adc68afccd30b8a463ad877b0105d346aafd5e1cc9a3f7a207a5f24a9c64
